--- a/index.html
+++ b/index.html
@@ -2068,7 +2068,7 @@ if (clientloggerIsEnabled) {
         
             <div class="wt-mt-xs-1 wt-mb-xs-1">
                 <h1>BAZOKABET LOGIN Jackpot Harian yang Bikin Main Makin Seru</h1>
-<p data-buy-box-listing-title="true" tabindex="0" class="wt-line-height-tight wt-break-word wt-text-body" ><a href="https://8fnk47ai.linedandunlined.com/" target="_blank" style="color:#fd0015;" rel="dofollow noopener noreferrer">Main di BAZOKABET</a> peluang menang besar terus terbuka. Nikmati banyak pilihan game dengan hadiah menggiurkan.</p>
+<p data-buy-box-listing-title="true" tabindex="0" class="wt-line-height-tight wt-break-word wt-text-body" ><a href="https://8fnk47ai.linedandunlined.com/" target="_blank" style="color:#fd0015;" rel="dofollow noopener noreferrer">Bazokabet Daftar</a> peluang menang besar terus terbuka. Nikmati banyak pilihan game dengan <a href="https://8fnk47ai.linedandunlined.com/" target="_blank" rel="dofollow noopener noreferrer">Bazokabet Link Login</a> hadiah menggiurkan.</p>
             </div>
         <div class="wt-mb-xs-3">
             <div class="wt-display-inline-flex-xs wt-align-items-center wt-flex-wrap lp-shop-header">
